--- a/kubernetes/kafka/kafka-cluster.yaml
+++ b/kubernetes/kafka/kafka-cluster.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   kafka:
     version: 3.4.0
-    replicas: 3
+    replicas: 1
     listeners:
       - name: plain
         port: 9092
@@ -23,11 +23,11 @@ spec:
         type: nodeport
         tls: false
     config:
-      offsets.topic.replication.factor: 3
-      transaction.state.log.replication.factor: 3
-      transaction.state.log.min.isr: 2
-      default.replication.factor: 3
-      min.insync.replicas: 2
+      offsets.topic.replication.factor: 1
+      transaction.state.log.replication.factor: 1
+      transaction.state.log.min.isr: 1
+      default.replication.factor: 1
+      min.insync.replicas: 1
       inter.broker.protocol.version: "3.4"
       auto.create.topics.enable: "true"
     storage:
@@ -35,28 +35,28 @@ spec:
       volumes:
       - id: 0
         type: persistent-claim
-        size: 100Gi
+        size: 10Gi
         deleteClaim: false
     resources:
       requests:
-        memory: 2Gi
-        cpu: 1
+        memory: 512Mi
+        cpu: 500m
       limits:
-        memory: 4Gi
-        cpu: 2
+        memory: 1Gi
+        cpu: 1
   zookeeper:
-    replicas: 3
+    replicas: 1
     storage:
       type: persistent-claim
-      size: 20Gi
+      size: 5Gi
       deleteClaim: false
     resources:
       requests:
-        memory: 1Gi
-        cpu: 0.5
+        memory: 256Mi
+        cpu: 250m
       limits:
-        memory: 2Gi
-        cpu: 1
+        memory: 512Mi
+        cpu: 500m
   entityOperator:
     topicOperator: {}
     userOperator: {}
@@ -69,8 +69,8 @@ metadata:
   labels:
     strimzi.io/cluster: mlops-kafka
 spec:
-  partitions: 12
-  replicas: 3
+  partitions: 3
+  replicas: 1
   config:
     retention.ms: 604800000 # 7 days
     cleanup.policy: delete
@@ -83,8 +83,8 @@ metadata:
   labels:
     strimzi.io/cluster: mlops-kafka
 spec:
-  partitions: 12
-  replicas: 3
+  partitions: 3
+  replicas: 1
   config:
     retention.ms: 604800000 # 7 days
     cleanup.policy: delete
@@ -97,8 +97,8 @@ metadata:
   labels:
     strimzi.io/cluster: mlops-kafka
 spec:
-  partitions: 6
-  replicas: 3
+  partitions: 1
+  replicas: 1
   config:
     retention.ms: 604800000 # 7 days
     cleanup.policy: delete 
